--- a/QuadFlightController/QuadFlightController.vcxproj.filters
+++ b/QuadFlightController/QuadFlightController.vcxproj.filters
@@ -21,5 +21,19 @@
     <ClInclude Include="__vm\.QuadFlightController.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_Razor9DOFLib\src\JAF_Razor9DOFLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\_micro-api\libraries\JAF_Razor9DOFLib\src\JAF_Razor9DOFLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
