--- a/QuadFlightController/QuadFlightController.vcxproj.filters
+++ b/QuadFlightController/QuadFlightController.vcxproj.filters
@@ -21,18 +21,81 @@
     <ClInclude Include="__vm\.QuadFlightController.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink_bridge_header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink_receive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QuadFlightMain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_EscControllerLib\src\JAF_EscControllerLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_FrequencySchedulerLib\src\JAF_FrequencySchedulerLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\_micro-api\libraries\JAF_PIDLib\src\JAF_PIDLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="src\_micro-api\libraries\JAF_Razor9DOFLib\src\JAF_Razor9DOFLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.h">
+    <ClInclude Include="src\_micro-api\libraries\JAF_WatchdogLib\src\JAF_WatchdogLib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\mavlink_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\checksum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\mavlink_conversions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\mavlink_helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\protocol.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\JAF_QuadProject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\mavlink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\mavlink_msg_heartbeat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\testsuite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\version.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\_micro-api\libraries\JAF_EscControllerLib\src\JAF_EscControllerLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\_micro-api\libraries\JAF_FrequencySchedulerLib\src\JAF_FrequencySchedulerLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\_micro-api\libraries\JAF_PIDLib\src\JAF_PIDLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\_micro-api\libraries\JAF_Razor9DOFLib\src\JAF_Razor9DOFLib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.cpp">
+    <ClCompile Include="src\_micro-api\libraries\JAF_WatchdogLib\src\JAF_WatchdogLib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
