--- a/QuadFlightController/QuadFlightController.vcxproj.filters
+++ b/QuadFlightController/QuadFlightController.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="src\JAF_MavLink\mavlink_receive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="QuadFlightMain.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\_micro-api\libraries\JAF_EscControllerLib\src\JAF_EscControllerLib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -78,6 +75,9 @@
     <ClInclude Include="src\JAF_MavLink\mavlink\JAF_QuadProject\version.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\QuadFlightMain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\_micro-api\libraries\JAF_UltrasonicLib\src\JAF_UltrasonicLib.cpp">
@@ -96,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\_micro-api\libraries\JAF_WatchdogLib\src\JAF_WatchdogLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\QuadFlightMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
